--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -93,7 +93,7 @@
             class="edu.ualberta.med.biobank.rcp.ShipmentAdministrationPerspective"
             id="edu.ualberta.med.biobank.perspective.shipments"
             icon="icons/shipment.png"
-            name="Clinic Shipment View">
+            name="Shipment View">
       </perspective>
       <perspective
             class="edu.ualberta.med.biobank.rcp.DispatchAdministrationPerspective"
@@ -239,7 +239,7 @@
       </command>
       <command
             id="edu.ualberta.med.biobank.commands.shipmentAdmin"
-            name="Clinic Shipment administration">
+            name="Shipment administration">
       </command>
       <command
             id="edu.ualberta.med.biobank.commands.reloadViewWithTree"
@@ -299,7 +299,7 @@
       </command>
       <command
             id="edu.ualberta.med.biobank.commands.dispatchAdmin"
-            name="Dispatch Shipment Administration">
+            name="Dispatch Administration">
       </command>
        <command
             id="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd"
@@ -1151,21 +1151,21 @@
          </menu>
          <menu
                id="edu.ualberta.med.biobank.menu.shipments"
-               label="Clinic Shipments">
+               label="Shipments">
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
                   icon="icons/shipment_add.png"
-                  label="Add Clinic Shipment"
+                  label="Add Shipment"
                   style="push">
             </command>
          </menu>
          <menu
                id="edu.ualberta.med.biobank.menu.dispatch"
-               label="Dispatch Shipments">
+               label="Dispatches">
             <command
                   commandId="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd"
                   icon="icons/dispatch_add.png"
-                  label="Add Dispatch Shipment"
+                  label="Add Dispatch"
                   style="push">
             </command>
          </menu>
@@ -1256,7 +1256,7 @@
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipmentAdmin"
                   icon="icons/shipment.png"
-                  label="Clinic Shipment View"
+                  label="Shipment View"
                   style="push">
             </command>
             <command
@@ -1396,13 +1396,13 @@
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipmentAdmin"
                   icon="icons/shipment.png"
-                  label="Clinic Shipment View"
+                  label="Shipment View"
                   style="push">
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.dispatchAdmin"
                   icon="icons/dispatch.png"
-                  label="Dispatch Shipment View"
+                  label="Dispatch View"
                   style="push">
             </command>
             <command
@@ -1632,7 +1632,7 @@
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
                   icon="icons/shipment_add.png"
-                  label="Add Clinic Shipment"
+                  label="Add Shipment"
                   style="push">
                <visibleWhen
                      checkEnabled="false">
@@ -1673,7 +1673,7 @@
             <command
                   commandId="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd"
                   icon="icons/dispatch_add.png"
-                  label="Add Dispatch Shipment"
+                  label="Add Dispatch"
                   style="push">
                <visibleWhen
                      checkEnabled="false">
@@ -2074,28 +2074,28 @@
             default="false"
             icon="icons/shipment.png"
             id="edu.ualberta.med.biobank.forms.ShipmentEntryForm"
-            name="Clinic Shipment Entry">
+            name="Shipment Entry">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.ShipmentViewForm"
             default="false" 
             icon="icons/shipment.png"
             id="edu.ualberta.med.biobank.forms.ShipmentViewForm"
-            name="Clinic Shipment View">
+            name="Shipment View">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.DispatchSendingEntryForm"
             default="false"
             icon="icons/shipment.png"
             id="edu.ualberta.med.biobank.forms.DispatchEntryForm"
-            name="Dispatch Shipment Entry">
+            name="Dispatch Entry">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.DispatchViewForm"
             default="false"
             icon="icons/shipment.png"
             id="edu.ualberta.med.biobank.forms.DispatchViewForm"
-            name="Dispatch Shipment View">
+            name="Dispatch View">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.reports.ReportsEditor"
@@ -2316,21 +2316,21 @@
       default="false"
       icon="icons/dispatch.png"
       id="edu.ualberta.med.biobank.forms.DispatchViewForm"
-      name="Dispatch Shipment View">
+      name="Dispatch View">
 </editor>
 <editor
       class="edu.ualberta.med.biobank.forms.DispatchReceivingEntryForm"
       default="false"
       icon="icons/dispatch.png"
       id="edu.ualberta.med.biobank.forms.DispatchReceivingEntryForm"
-      name="Dispatch Shipment Receiver Entry">
+      name="Dispatch Receiver Entry">
 </editor>
 <editor
       class="edu.ualberta.med.biobank.forms.DispatchSendingEntryForm"
       default="false"
       icon="icons/dispatch.png"
       id="edu.ualberta.med.biobank.forms.DispatchSendingEntryForm"
-      name="Dispatch Shipment Sending Entry">
+      name="Dispatch Sending Entry">
 </editor>
    </extension>
    <extension
@@ -2558,7 +2558,7 @@
             class="edu.ualberta.med.biobank.views.ShipmentAdministrationView"
             icon="icons/shipment.png"
             id="edu.ualberta.med.biobank.views.ShipmentAdminView"
-            name="Clinic Shipment Administration"
+            name="Shipment Administration"
             restorable="true">
       </view>
       <view
