small fix in report description to improve clarity

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -8,7 +8,7 @@ AliquotInvoiceByPatient.NAME = Aliquots per Patient by Date
 AliquotInvoiceByPatient.DESCRIPTION =Lists all aliquots linked in a particular date range, ordered by patient.
 AliquotInvoiceByPatient.EDITOR=AliquotInvoiceByPatientEditor
 AliquotRequest.NAME = Aliquot Request by CSV file
-AliquotRequest.DESCRIPTION=Given a CSV file detailing a request (Patient Number, Date Drawn, Sample Type, # Requested), generate a list of aliquot locations.
+AliquotRequest.DESCRIPTION=Given a CSV file detailing a request (Patient Number, Date Drawn, Sample Type (Short Name), # Requested), generate a list of aliquot locations.
 AliquotRequest.EDITOR=AliquotRequestEditor
 AliquotsByPallet.NAME = Aliquots By Container
 AliquotsByPallet.DESCRIPTION = Lists all aliquots located in a given bottom-level container.
