--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -14,5 +14,6 @@ bin.includes = META-INF/,\
                lib/SuperCSV-1.52.jar,\
                lib/spiffy-all-0.05.jar,\
                lib/mailapi.jar,\
-               lib/smtp.jar
+               lib/smtp.jar,\
+               lib/jasperreports-3.7.0.jar
 Bundle-NativeCode: scanlib.dll
