1- Add security check to access ScanLink/Assign/Cabinet only if can update the selected site 2- Update Script for activity status creation to remove Disabled 3- Solve a problem in protection element deletion when a site is deleted

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -569,6 +569,9 @@
               <reference
                     definitionId="biobank2.siteSelected">
               </reference>
+              <reference
+                    definitionId="biobank2.canUpdateSiteSelected">
+              </reference>
             </and>
          </activeWhen>
          <enabledWhen>
