resolves #876: the Export menu create a zip file containing .log file and activitylogs files of the day

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -246,7 +246,7 @@
             name="Reload">
       </command>
       <command
-            defaultHandler="edu.ualberta.med.biobank.handlers.SendErrorMail"
+            defaultHandler="edu.ualberta.med.biobank.handlers.SendErrorMailHandler"
             id="edu.ualberta.med.biobank.commands.sendErrorMail"
             name="Send Error Mail">
       </command>
@@ -305,6 +305,11 @@
             id="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd"
             name="Add dispatch shipment">
       </command>
+       <command
+             defaultHandler="edu.ualberta.med.biobank.handlers.ExportErrorsLogsHandler"
+             id="edu.ualberta.med.biobank.commands.exportErrorsLogs"
+             name="Export Errors Logs">
+       </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
