--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1035,6 +1035,9 @@
               <reference
                     definitionId="biobank2.siteSelected">
               </reference>
+              <reference
+                    definitionId="biobank2.canUpdateSiteSelected">
+              </reference>
             </and>
          </activeWhen>
          <enabledWhen>
