add all missing libs in biobank2 plugin.xml file

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -9,11 +9,6 @@ bin.includes = META-INF/,\
                plugin_customization.ini,\
                .options,\
                about.mappings,\
-               lib/DynamicJasper-3.0.14.jar,\
-               lib/jdt-compiler-3.1.1.jar,\
-               lib/SuperCSV-1.52.jar,\
-               lib/spiffy-all-0.05.jar,\
-               lib/mailapi.jar,\
-               lib/smtp.jar,\
-               lib/jasperreports-3.7.0.jar
+               lib/
 Bundle-NativeCode: scanlib.dll
+bin.excludes = lib/.donotdeleteme
