--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -15,5 +15,10 @@ bin.includes = META-INF/,\
                lib/spiffy-all-0.05.jar,\
                lib/mailapi.jar,\
                lib/smtp.jar,\
-               lib/jasperreports-3.7.0.jar
+               lib/jasperreports-3.7.0.jar,\
+               lib/commons-beanutils-1.8.0.jar,\
+               lib/commons-digester-1.7.jar,\
+               lib/gluegen.jar,\
+               lib/iText-2.1.0.jar,\
+               lib/jdom.jar
 Bundle-NativeCode: scanlib.dll
